# mapfish-print-logs

./: .editorconfig  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  BACKPORT_TODO  CHANGELOG.md  Jenkinsfile  Makefile  README.md  SECURITY.md  docker-compose.override.sample.yaml  docker-compose.yaml  pyproject.toml  spell-ignore-words.txt
.github/: dependabot.yaml  dependabot.yml  renovate.json5
.github/workflows/: audit.yaml  clean.yaml  dependabot-auto-merge.yaml  main.yaml  main.yml  nightly.yml  rebuild.yaml  rebuild.yml
acceptance_tests/: .dockerignore  Dockerfile  Pipfile  docker-compose.yaml  package-lock.json  package.json  pip-cve-ignore  pyproject.toml
acceptance_tests/acceptance/: conftest.py  fake_print_logs.py  test_accounting.py  test_health_check.py  test_index.py  test_login.py  test_loki.py  test_ref.py  test_ref_es.py  test_ref_loki.py  test_source.py  test_sources.py  test_ui.py
api/: .bandit.yaml  .coveragerc  .prospector.yaml  Dockerfile  Pipfile  development.ini  gunicorn.conf.py  pip-cve-ignore  production.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
api/mapfish_print_logs/: __init__.py  accounting.py  config.py  configuration.py  elastic_search.py  loki.py  models.py  security.py  services.py  utils.py
api/mapfish_print_logs/services/: __init__.py  accounting.py  auth.py  index.py  ref.py  source.py  sources.py
api/mapfish_print_logs/static/: index.html  style.css
api/mapfish_print_logs/templates/: accounting.html.mako  index.html.mako  login.html.mako  ref.html.mako  source.html.mako  sources.html.mako
ci/: .snyk  config.yaml  requirements.txt
configs/: Dockerfile  shared_config_manager.yaml
