[tool.poetry]
name = "acceptance"
version = "0.0.0"
description = "Not used"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pytest = "7.2.2"
junit2html = "30.1.3"
c2cwsgiutils = { version = "5.2.2", extras = ["standard", "test_images", "oauth2"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
