[tool.mypy]
python_version = "3.8"
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict = true

[tool.poetry]
name = "mapfish-print-logs"
version = "0.0.0"
description = "Not used"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
humanfriendly = "10.0"
pyramid-mako = "1.1.0"
c2cwsgiutils = { version = "5.1.6", extras = ["broadcast", "standard"] }
pyramid = "2.0"
sqlalchemy = "1.4.46"

[tool.poetry.dev-dependencies]
prospector = { version = "1.8.4", extras = ["with_bandit", "with_mypy"] }
pytest = "7.2.0"
types-setuptools = "65.6.0.3"
types-pyyaml = "6.0.12.2"
types-requests = "2.28.11.7"
typing-extensions = "4.4.0"

[tool.poetry.plugins."paste.app_factory"]
main = "mapfish_print_logs:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
