[tool.mypy]
python_version = "3.8"
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict = true

[tool.poetry]
name = "mapfish-print-logs"
version = "0.0.0"
description = "Not used"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
humanfriendly = "10.0"
pyramid-mako = "1.1.0"
c2cwsgiutils = { version = "5.2.2", extras = ["broadcast", "standard", "oauth2"] }
pyramid = "2.0.1"
sqlalchemy = "2.0.15"

[tool.poetry.dev-dependencies]
prospector = { version = "1.10.2", extras = ["with_bandit", "with_mypy"] }
pytest = "7.3.1"
types-setuptools = "67.8.0.0"
types-pyyaml = "6.0.12.10"
types-requests = "2.31.0.1"
typing-extensions = "4.6.3"

[tool.poetry.plugins."paste.app_factory"]
main = "mapfish_print_logs:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
